tests/syntax_tests/data/parsing/errors/expressions/taggedTemplateEmptyInterpolation.res
let q = sql`SELECT * FROM ${}`